--- a/ravioli-ui/public/index.html
+++ b/ravioli-ui/public/index.html
@@ -7,6 +7,7 @@
 	<title>Ravioli</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
+    <link rel="manifest" href="/manifest.json">
 	<link rel='stylesheet' href='/build/bundle.css'>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.4.0/dist/sql-wasm.min.js" integrity="sha512-fYYdvx4lQ90HQ+2NhX5mpAUwnn9LwIuUc+gaG02z7LMfKoaE6GcZjZYD79LovSi4QfqcZ0+T3moNJcFCXKBWbA==" crossorigin="anonymous"></script>
