ui: mobile full height

--- a/ravioli-ui/public/index.html
+++ b/ravioli-ui/public/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+    <meta charset='utf-8'>
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
 
-	<title>Ravioli</title>
+    <title>Ravioli</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+    <link rel='icon' type='image/png' href='/favicon.png'>
     <link rel="manifest" href="/manifest.json">
-	<link rel='stylesheet' href='/build/bundle.css'>
+    <link rel='stylesheet' href='/build/bundle.css'>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.4.0/dist/sql-wasm.min.js" integrity="sha512-fYYdvx4lQ90HQ+2NhX5mpAUwnn9LwIuUc+gaG02z7LMfKoaE6GcZjZYD79LovSi4QfqcZ0+T3moNJcFCXKBWbA==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.4.0/dist/sql-wasm.min.js"
+        integrity="sha512-fYYdvx4lQ90HQ+2NhX5mpAUwnn9LwIuUc+gaG02z7LMfKoaE6GcZjZYD79LovSi4QfqcZ0+T3moNJcFCXKBWbA=="
+        crossorigin="anonymous"></script>
 
-	<script defer src='/build/bundle.js'></script>
+    <script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
 </body>
+
 </html>
